<resources>
    <string name="app_name">课程表</string>
    <string name="Login">登录</string>
    <string name="Student_ID">学号</string>
    <string name="PassWord">密码</string>
    <string name="SavePassword">保存密码</string>
    <string name="AutoLogin">自动登录</string>
    <string name="SwitchVersion">显示任课老师</string>
    <string name="SwitchAll">显示所有课表</string>
    <string name="SwitchSaveCourseInfo">保存课表信息</string>
    <string name="About">关于</string>
    <string name="Refresh">刷新</string>
    <string name="Update">更新</string>
    <string name="Quit">退出</string>
    <string name="QQ">QQ</string>
    <string name="QQ_Number">1411311525</string>
    <string name="GitHub">GitHub</string>
    <string name="Name">Nihfkeol</string>
    <string name="Open_Source_License">使用开源代码：</string>
    <string name="OkHttp">OkHttp 4.9.0</string>
    <string name="OkHttp_Info">com.squareup.okhttp3 \n
        https://github.com/square/okhttp
    </string>
    <string name="Jsoup">Jsoup 1.13.1</string>
    <string name="Jsoup_Info">org.jsoup \n
        https://github.com/jhy/jsoup/
    </string>
    <string name="Setting">设置</string>
    <string name="NotShow">不再显示</string>
    <string name="ShowVersionBtnText">确定</string>
    <string name="VersionInfo">
        提示：\n
        \t  第一次进入请设置开学日期，路径：课程表->设置->设置开学日期\n
        \n
        2.2\n
        \t  修改：\n
        \t\t    整理了登录页面和关于页面布局\n
        \t  新增：\n
        \t\t    自己选择开学日期\n
        \t\t    快速定位到当前周\n
        \t\t    查看成绩\n
        \n
        2.1.2\n
        \t  修改：\n
        \t\t    缩短连接学校服务器响应时间\n
        \t\t    删除一些冗余代码\n
        \n
        2.1.1\n
        \t  修复：\n
        \t\t    勾选保存课程表后，在没有网的情况下读取本地课程表失败\n
        \n
        2.1\n
        \t  添加：\n
        \t\t    自动更新检测\n
        \t\t    显示版本信息\n
        \t\t    显示一言\n
        \t  修复：\n
        \t\t    勾选框问题\n
        \n
        2.0\n
        \t  修改：\n
        \t\t    使用kotlin重构\n
        \t\t    去除显示所有课表，切换为单周显示\n
        \t\t    每周的相同课程使用同种颜色表示\n
        \t\t    去除自动保存课表到本地，根据个人意愿是否保存\n
        \t\t    每次都是请求登录不保存cookie到本地\n
        \t  新增：\n
        \t\t    退出当前账号\n
        \t  修复：\n
        \t\t    错误显示当前第几周\n
        \n
        1.2\n
        \t  修复：\n
        \t\t    勾选按钮问题\n
        \t\t    切换课程表版本后，对话框列表样式显示不整齐\n
        \t  添加：\n
        \t\t    新的UI显示\n
        \n
        1.1\n
        \t  修复：\n
        \t\t    网络连接错误问题\n
        \t  修改：\n
        \t\t    UI显示\n
        \t  添加：\n
        \t\t    切换课程表版本\n
        \t\t    把课程表储存在本地，防止学校服务器突然炸掉\n
        \n
        1.0\n
        \t 课程表
    </string>
    <string name="DownloadFail">下载失败</string>
    <string name="Cancel">取消</string>
    <string name="Retry">重试</string>
    <string name="CheckVersionLib">CheckVersionLib 2.4</string>
    <string name="CheckVersionLib_Info">com.github.AlexLiuSheng\n
    https://github.com/AlexLiuSheng/CheckVersionLib
    </string>
    <string name="Version">版本</string>
    <string name="Author">作者</string>
    <string name="BackWeek">回到当前周</string>
    <string name="setStartDate">设置开学日期</string>
    <string name="ScoreWarningText">请先登录</string>
    <string name="sliding_menu_course">    课程表</string>
    <string name="sliding_menu_score">    成绩</string>
</resources>